# ETL

./: .env  .gitignore  README.md  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 1cb41b4aac2b_add_most_expensive_and_ods_users_tables.py  77993181fb00_create_tables.py  aed1d4037978_add_city_column_to_ods_users.py  ba8b1a6d6b7c_change_primary_key_to_id.py
src/: main.py
src/config/: database.py  settings.py
src/core/: data_extraction.py  data_loader.py  data_transform.py  exception.py
src/core/models/: scheme.py
src/core/service/: routers.py
src/core/service/templates/: table.html  tables.html
src/core/utils/: custom_logging.py
src/db/: init_db.py  table.py
src/docker/: docker-compose.yaml
the_first_two_tasks/: first.py  second.py
