[tool.poetry]
name = "ETL"
version = "0.1.0"
description = ""
authors = ["kuravamnedura"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
psycopg = "^3.1.18"
alembic = "^1.13.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
urllib3 = "^2.5.0"
uvicorn = "^0.27.0"
Jinja2 = "^3.1.3"
fastapi = "^0.109.1"
aiohttp = "^3.9.1"
anyio = "^4.9.0"
asyncpg = "^0.30.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"